--- a/MobiHymn2/MobiHymn2/Views/BookmarksPage.xaml
+++ b/MobiHymn2/MobiHymn2/Views/BookmarksPage.xaml
@@ -81,10 +81,10 @@
                         />-->
                         <elems:AnimatingView
                             Source="heart"
-                            Size="{OnPlatform iOS=2.5}"
+                            Size="{OnPlatform iOS=2.5, Android=600}"
                             HorizontalOptions="FillAndExpand"
                             VerticalOptions="FillAndExpand"
-                            AbsoluteLayout.LayoutBounds="{OnPlatform Android='0.5, 0.5, 2, 2', iOS='0.8, 0.8, 1, 1'}"
+                            AbsoluteLayout.LayoutBounds="{OnPlatform Android='0.5, 0.7, 2, 2', iOS='0.8, 0.8, 1, 1'}"
                             AbsoluteLayout.LayoutFlags="All"/>
                     </AbsoluteLayout>
                     <StackLayout>
