--- a/MobiHymn2/MobiHymn2/Elements/TimelineItem.xaml
+++ b/MobiHymn2/MobiHymn2/Elements/TimelineItem.xaml
@@ -8,13 +8,12 @@
     <FlexLayout
         Margin="10,0,0,0"
         Direction="Row"
-        HeightRequest="80"
         JustifyContent="Start">
 
         <!--  VERTICAL LINE WITH IMAGE  -->
         <StackLayout
             x:Name="firstStackLayout"
-            Margin="0,0,0,-6"
+            Margin="0,0,0,0"
             HorizontalOptions="Center"
             Orientation="Vertical"
             VerticalOptions="Center">
@@ -26,13 +25,15 @@
                 HeightRequest="18"
                 HorizontalOptions="Center"
                 WidthRequest="5"
+                IsVisible="False"
                 Color="{AppThemeBinding Dark={StaticResource GrayLight}, Light={StaticResource Gray}}" />
             <Label
                 FontSize="20"
                 FontFamily="FAS"
                 TextColor="{AppThemeBinding Dark={StaticResource GrayLight}, Light={StaticResource Gray}}"
                 Text="{Static Member=fa:FontAwesomeIcons.CircleCheck}"
-                Margin="-2,0,0,0"/>
+                IsVisible="False"
+                Margin="0,0,0,0"/>
             <!--  LAST CENTER VERTICAL LINE  -->
             <BoxView
                 Grid.Row="2"
@@ -41,45 +42,44 @@
                 HeightRequest="42"
                 HorizontalOptions="Center"
                 WidthRequest="1"
+                IsVisible="False"
                 Color="{AppThemeBinding Dark={StaticResource GrayLight}, Light={StaticResource Gray}}" />
         </StackLayout>
 
         <!--  MESSAGE  -->
         <StackLayout
-            Padding="15,0,0,0"
+            Margin="15,0,0,0"
             Orientation="Horizontal"
             VerticalOptions="Center">
             <StackLayout
-                Margin="0,0,5,0"
                 HorizontalOptions="Start"
                 Orientation="Vertical"
-                VerticalOptions="Center">
+                HeightRequest="{Binding Item.Height, Source={x:Reference this}}">
                 <Label
                     FontAttributes="Bold"
                     FontSize="15"
                     HorizontalOptions="Start"
                     Text="{Binding Item.Header, Source={x:Reference this}, FallbackValue='Title'}"
-                    TextColor="{StaticResource Primary}"
-                    HorizontalTextAlignment="Start"/>
+                    TextColor="{AppThemeBinding Dark={StaticResource Primary}, Light={StaticResource Gray}}"
+                    HorizontalTextAlignment="Start"
+                    Margin="0,0,0,0"/>
                 <CollectionView ItemsSource="{Binding Item.Details, Source={x:Reference this}, FallbackValue=[]}">
                     <CollectionView.ItemTemplate>
                         <DataTemplate>
                             <StackLayout
-                                Margin="0,0,5,0"
-                                Orientation="Horizontal"
-                                VerticalOptions="EndAndExpand">
+                                Orientation="Horizontal">
                                 <FlexLayout AlignItems="Start">
                                     <Label
                                         FontSize="7"
                                         FontFamily="FAS"
-                                        TextColor="{AppThemeBinding Dark={StaticResource GrayLight}, Light={StaticResource Gray}}"
+                                        TextColor="{AppThemeBinding Dark={StaticResource GrayLight}, Light={StaticResource PrimaryText}}"
                                         Text="{Static Member=fa:FontAwesomeIcons.Circle}"
                                         Margin="0,3.5,5,0"/>
                                     <Label
                                         FontSize="14"
                                         Text="{Binding ., FallbackValue='Detail'}"
-                                        Padding="0,-3,0,0"
-                                        TextColor="{AppThemeBinding Dark={StaticResource GrayLight}, Light={StaticResource Gray}}" />
+                                        Padding="0,-2,0,0"
+                                        TextColor="{AppThemeBinding Dark={StaticResource GrayLight}, Light={StaticResource PrimaryText}}" />
                                 </FlexLayout>
                             </StackLayout>
                         </DataTemplate>
